# ocean_optics_spectrometer_robotraconteur_driver

./: README.md  pyproject.toml  setup.py
config/: HR4000CG_UV_NIR_spectrometer_default_config.yaml
examples/: plot_spectrum.py
src/ocean_optics_spectrometer_robotraconteur_driver/: __main__.py  experimental.ocean_optics.spectrometer.robdef  spectrometer_driver.py
